--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <img src="Livraria Athena (1).png" alt="Livraria Athena">
+    <img src="Livraria Athena.png" width alt="Livraria Athena">
     <h1> Menu</h1>
         <li><a href="link01.html"> Link 01</a></li>
         <li><a href="link02.html"> Link 02</a></li>
