--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <img src="Livraria Athena.png" width alt="Livraria Athena">
+    <img src="Livraria Athena.png" width="20%" align="center" alt="Inserir a descrição da imagem"></center>
     <h1> Menu</h1>
-        <li><a href="link01.html"> Link 01</a></li>
-        <li><a href="link02.html"> Link 02</a></li>
-        <li><a href="link03.html"> Link 03</a></li>
-        <li><a href="link04.html"> Link 04</a></li>
-        <li><a href="link05.html"> Link 05</a></li>
+        <li><a href="link01.html"> Autores</a></li>
+        <li><a href="link02.html"> Gêneros</a></li>
+        <li><a href="link03.html"> Lançamentos</a></li>
+        <li><a href="link04.html"> Mais Vendidos</a></li>
+        <li><a href="link05.html"> Contatos</a></li>
     </h1>
 </body>
 </html>
