--- a/PWEB/index.html
+++ b/PWEB/index.html
@@ -9,11 +9,11 @@
 <body>
     <img src="Livraria Athena.png" width="20%" align="center" alt="Inserir a descrição da imagem"></center>
     <h1> Menu</h1>
-        <li><a href="link01.html"> Autores</a></li>
-        <li><a href="link02.html"> Gêneros</a></li>
-        <li><a href="link03.html"> Lançamentos</a></li>
-        <li><a href="link04.html"> Mais Vendidos</a></li>
-        <li><a href="link05.html"> Contatos</a></li>
+        <li><a href="autores.html"> Autores</a></li>
+        <li><a href="generos.html"> Gêneros</a></li>
+        <li><a href="lancamentos.html"> Lançamentos</a></li>
+        <li><a href="maisvendidos.html"> Mais Vendidos</a></li>
+        <li><a href="contatos.html"> Contatos</a></li>
     </h1>
 </body>
 </html>
