--- a/maisvendidos.html
+++ b/maisvendidos.html
@@ -12,11 +12,16 @@
     
     <center><img src="Livraria Athena logo sem fundo.png" width="20%" align="height" alt="Inserir a descrição da imagem"></center>
     <center><h</h1>
-        |<a href="autores.html"> Autores</a>
-        |<a href="generos.html"> Gêneros</a>
-        |<a href="lancamentos.html"> Lançamentos</a></li>
-        |<a href="maisvendidos.html"> Mais Vendidos</a></li>
-        |<a href="contatos.html"> Contatos</a></li>
+        <table align="center" width="70%" bgcolor="#E4DFCC">
+            <tr>
+              <td align="center"><a href="autores.html"> Autores</a></td>
+              <td align="center"><a href="generos.html"> Gêneros</a></td>
+              <td align="center"><a href="lancamentos.html"> Lançamentos</a></td>
+              <td align="center"><a href="maisvendidos.html"> Mais Vendidos</a></td>
+              <td align="center"><a href="contatos.html"> Contatos</a></td>
+              <br>
+              </tr>
+              </table>
         <br>
         <br>
         <br>
