--- a/maisvendidos.html
+++ b/maisvendidos.html
@@ -19,10 +19,10 @@
               <td align="center"><a href="lancamentos.html"> Lançamentos</a></td>
               <td align="center"><a href="maisvendidos.html"> Mais Vendidos</a></td>
               <td align="center"><a href="contatos.html"> Contatos</a></td>
+              <td aling="center"><a href="index.html">Página Inicial</a></td>
               <br>
               </tr>
               </table>
-        <br>
         <br>
         <br>
         <h1 align="center">Os Livros Mais Vendidos</h1>
