--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
                
                 <table align="center" width="70%" bgcolor="#E4DFCC">
                     <tr>
+                      <td aling="center"><a href="index.html">Início</a></td>
                       <td align="center"><a href="autores.html"> Autores</a></td>
                       <td align="center"><a href="generos.html"> Gêneros</a></td>
                       <td align="center"><a href="lancamentos.html"> Lançamentos</a></td>
                       <td align="center"><a href="maisvendidos.html"> Mais Vendidos</a></td>
                       <td align="center"><a href="contatos.html"> Contatos</a></td>
-                      <td aling="center"><a href="index.html">Página Inicial</a></td>
+                      
                       <br>
                       </tr>
                       </table>
