--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body bgcolor="#E4DFCC">
     
-                <center><img src="Livraria Athena logo sem fundo.png" width="30%" align="center" alt=" "></center>
+                <center><img src="Livraria Athena (2).png" width="30%" align="center" alt=" "></center>
                
                 <table align="center" width="70%" bgcolor="#E4DFCC">
                     <tr>
